# autologic

./: .gitignore  App.tsx  COMMIT_EDITMSG  CONTRIBUTING.md  LICENSE  README.md  config  index  index.css  index.html  main.py  main.tsx  package-lock.json  package.json  project-structure.txt  pyproject.toml  readme-collection.md  replit.nix  smartcar_methods.ts  start.sh  start_backend.sh  start_fastapi.sh  start_frontend.sh  start_nextgen.sh  test_shopify_api.html  theme.json
backend/: requirements.txt
backend/app/: db.py  main.py  smartcar_client.py
components/admin/: ImportData.tsx
components/ui/: spinner.tsx  (+4 more)
data/: historical_vehicles.csv  mexican_vehicles.csv
docs/: arquitectura.md  nextgen_app.md
frontend/: package.json
hooks/: use-vehicle.ts
lib/: app-context.tsx  auth-context.tsx  contextManager.ts  firebase.ts  pdfService.ts  refaccionFuncion.js  shopify.ts  shopify_refaccion.ts  types.ts  vehicle-context.tsx  vehicleHealthService.ts
nextgen_backend/: main.py
pages/: analytics.tsx  catalog.tsx  compare.tsx  diagnostics.tsx  forgot-password.tsx  home.tsx  login.tsx  my-vehicles-new.tsx  my-vehicles.tsx  product.tsx  profile.tsx  signup.tsx  vehicleHealth.tsx  video.tsx  videos.tsx
scripts/: README.md  importHistoricalVehicles.ts  importVehicles.ts  init-github-new.sh  init-github.sh  test_shopify_search.ts
server/: README.md  routes.ts  smartcar.ts  storage.ts
shared/: README.md  schema.ts
temp/: test.js  test.mjs
tests/: test_nextgen_status.py  test_status.py
types/: vehicleHealth.ts  video.ts
utils/: colorContrast.ts  format.ts
(+70 files in other folders)
